# StructureDCA

./: .gitignore  LICENSE  MANIFEST.in  README.md  colab_notebook_StructureDCA.ipynb  pyproject.toml  setup.py
structuredca/: __init__.py  cli.py  structuredca.py
structuredca/aligner/: __init__.py  linear_extrapolation.py  structure_sequence_alignment.py
structuredca/dca_model/: __init__.py  dca_model.py  gauge.py
structuredca/dca_model/data_structures/: __init__.py  sparse_J.py  sparse_matrix.py
structuredca/dca_model/dca_solvers/: __init__.py  dca_solver.py
structuredca/dca_model/dca_solvers/plmdca/: CMakeLists.txt  __init__.py  plmdca.cpp  plmdca.py  plmdcaBackend.cpp
structuredca/dca_model/dca_solvers/plmdca/include/: plmdca.h
structuredca/sequence/: __init__.py  amino_acid.py  fasta_reader.py  msa.py  mutation.py  pairwise_alignment.py  sequence.py
structuredca/structure/: __init__.py  residue.py  structure.py
structuredca/structure/rsa/: __init__.py  rsa_biopython.py  rsa_solver.py
structuredca/utils/: __init__.py  logger.py  utils.py
test_data/: 6acv_A_29-94.csv  6acv_A_29-94.fasta  B1-beta-lactamases_msa.fasta  NDM1_trimmed.fasta  NDM1_trimmed_ungapped.fasta  VIM2_trimmed.fasta  VIM2_trimmed_ungapped.fasta  cMSA_ParE-ParD.a3m
tutorials/: 1_sdca-basics.ipynb  2_sdca-properties.ipynb  3_sdca-standard-dca.ipynb  4_sdca-ppis.ipynb  5_sdca-custom-contacts.ipynb
